--- a/empresa/templates/listar_operador.html
+++ b/empresa/templates/listar_operador.html
@@ -2,16 +2,13 @@
 {% load static %}
 {% block 'head' %}
 
-<link rel="stylesheet" href="{% static 'empresarios/css/listar_empresas.css' %}">
-<link rel="stylesheet" href="{% static 'usuarios/css/usuarios.css' %}">
-
 {% endblock 'head' %}
 
 {% block 'body' %}
 {% include "partials/barra_navegacao.html" %}
     
 <div class="container my-5">
-    <h2 class="mb-4">Lista de Usuários</h2>
+    <h2 class="mb-4">Listar Operadores</h2>
 
     <div class="table-responsive">
         <table class="table table-striped table-hover">
@@ -26,13 +23,13 @@
                 </tr>
             </thead>
             <tbody>
-                {% for usuario in usuarios %}
+                {% for operador in operadores %}
                     <tr>
-                        <td>{{ usuario.id }}</td>
-                        <td>{{ usuario.nome_usuario }}</td>
-                        <td>{{ usuario.setor }}</td>
-                        <td>{{ usuario.email }}</td>
-                        <td>{{ usuario.status }}</td>
+                        <td>{{ operador.id }}</td>
+                        <td>{{ operador.nome_operador }}</td>
+                        <td>{{ operador.setor }}</td>
+                        <td>{{ operador.email }}</td>
+                        <td>{{ operador.status }}</td>
                         <td>
                             <a href="#" class="btn btn-warning btn-sm">Editar</a>
                         </td>
