--- a/parametros/templates/home.html
+++ b/parametros/templates/home.html
@@ -7,8 +7,43 @@
 {% block 'body' %}
     {% include "partials/barra_navegacao.html" %}
     <br>
-    <br>
     <div class="container dark-color container_empresas">
-        <h1 class="h1">Home</h1>
-    </div>
+        <h3 class="h3">Bem Vindo {{ first_name }} {{ last_name }}!</h3>
+    </div> 
+    <div class="container mt-5">
+        <div class="card mb-4">
+            <div class="card-body">
+                <h5 class="card-title">Data e Hora Atuais</h5>
+                <p class="card-text">
+                    {{ current_time|date:"d/m/Y H:i:s" }}
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Últimas Notícias</h5>
+                        <p class="card-text">Aqui você pode adicionar informações sobre as últimas notícias ou atualizações do sistema.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Próximos Eventos</h5>
+                        <p class="card-text">Esta seção pode ser usada para listar eventos importantes ou prazos próximos.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Outras Informações</h5>
+                <p class="card-text">Você pode adicionar outras informações ou funcionalidades úteis aqui.</p>
+            </div>
+        </div>
+    </div>    
 {% endblock 'body' %}
