--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -4,24 +4,20 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-
-    <ul class="navbar-nav ml-auto">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>      
+    <ul class="navbar-nav mr-auto">
+      <!-- MENU PRINCIPAL -->
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+      </li>
       <!-- MENU SOBRE -->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Arquivo
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
           <a class="dropdown-item" href="{% url 'sobre' %}">Sobre</a>
-          <div class="dropdown-divider"></div>          
-          <a class="dropdown-item" href="{% url 'parametros' %}">Parâmetros</a>   
-          <div class="dropdown-divider"></div>                 
-          <a class="dropdown-item" href="#">Sair</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="{% url 'parametros' %}">Parâmetros</a>
         </div>
       </li>
       <!-- MENU EMPRESA -->
@@ -35,7 +31,7 @@
           <a class="dropdown-item" href="{% url 'cadastrar_setor' %}">Cadastro de Setor</a>
         </div>
       </li>
-      <!-- MENU Operadores -->
+      <!-- MENU OPERADORES -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Operador
@@ -43,7 +39,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink3">
           <a class="dropdown-item" href="{% url 'cadastrar_operador' %}">Cadastro de Operador</a>
         </div>
-      </li>  
+      </li>
       <!-- MENU EQUIPAMENTOS -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -53,11 +49,10 @@
           <a class="dropdown-item" href="{% url 'cadastrar_computador' %}">Computador</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url 'cadastrar_marca' %}">Marca</a>
-          <div class="dropdown-divider"></div>                   
+          <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url 'cadastrar_software' %}">Software</a>
-          <div class="dropdown-divider"></div>          
+          <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url 'cadastrar_sistema_operacional' %}">Sistema Operacional</a>
-          <div class="dropdown-divider"></div>        
         </div>
       </li>
       <!-- MENU OCORRÊNCIAS -->
@@ -66,9 +61,9 @@
           Ocorrências
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink5">
-          <a class="dropdown-item" href="{% url 'ocorrencias_operadores' %}">Operadores</a>      
+          <a class="dropdown-item" href="{% url 'ocorrencias_operadores' %}">Operadores</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'ocorrencias_equipamentos' %}">Equipamentos</a>  
+          <a class="dropdown-item" href="{% url 'ocorrencias_equipamentos' %}">Equipamentos</a>
         </div>
       </li>
       <!-- MENU RELATÓRIOS -->
@@ -79,27 +74,28 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink6">
           <a class="dropdown-item" href="{% url 'listar_empresas' %}">Listar Empresas</a>
           <a class="dropdown-item" href="{% url 'listar_setores' %}">Listar Setores</a>
-          <div class="dropdown-divider"></div>          
-          <a class="dropdown-item" href="{% url 'listar_operadores' %}">Listar Operador</a>    
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'listar_computadores' %}">Listar Computadores</a>  
-          <a class="dropdown-item" href="{% url 'listar_marcas' %}">Listar Marcas</a> 
-          <a class="dropdown-item" href="{% url 'listar_softwares' %}">Listar Softwares</a>           
-          <a class="dropdown-item" href="{% url 'listar_sistemas_operacionais' %}">Listar Sistema Operacionais</a>                     
+          <a class="dropdown-item" href="{% url 'listar_operadores' %}">Listar Operadores</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="{% url 'listar_computadores' %}">Listar Computadores</a>
+          <a class="dropdown-item" href="{% url 'listar_marcas' %}">Listar Marcas</a>
+          <a class="dropdown-item" href="{% url 'listar_softwares' %}">Listar Softwares</a>
+          <a class="dropdown-item" href="{% url 'listar_sistemas_operacionais' %}">Listar Sistemas Operacionais</a>
         </div>
       </li>
       <!-- MENU WIKI -->
       <li class="nav-item">
         <a class="nav-link" href="#">Wiki</a>
-      </li>          
+      </li>
       <!-- MENU AJUDA -->
       <li class="nav-item">
         <a class="nav-link" href="#">Ajuda</a>
-      </li>      
-      <!-- MENU SAIR -->
-      <li class="nav-item">
-        <a class="nav-link" href="#">Sair</a>
       </li>
     </ul>
+    <!-- FORMULÁRIO DE LOGOUT -->
+    <form class="form-inline ml-auto" action="{% url 'logout' %}" method="post">
+      {% csrf_token %}
+      <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Logout</button>
+    </form>
   </div>
 </nav>
