--- a/empresa/templates/cadastrar_setor.html
+++ b/empresa/templates/cadastrar_setor.html
@@ -6,36 +6,41 @@
 
 
 {% block 'body' %}
+{% include "partials/barra_navegacao.html" %}
 
-    {% include "partials/barra_navegacao.html" %}
-
-    <div class="container">
-        <br>
-        <br>
-        <p class="h2">Cadastro de Setor</p>
-        {% if messages %}
-            {% for message in messages %}
-                <section class="alert {{message.tags}}">
-                    {{message}}
-                </section>
-            {% endfor %}
-        {% endif %}
-        <div class="row">
-            <div class="col-md">
-                <form action="{% url 'cadastrar_setor' %}" method="POST" enctype='multipart/form-data'>{% csrf_token %}
-                <label>Selecione a Empresa:</label>
-                <br>
-                <select name="empresa" class="form-control" id="exampleSelect">
-                {% for empresa in empresas %}
-                    <option value="{{ empresa.id }}">{{ empresa.nome_empresa }}</option>
-                {% endfor %}
-                </select>
-                <br>
-                <label>Digite o nome do Setor:</label>
-                <input type="text" name="nome_setor" placeholder="Digite o nome do setor" class="form-control">
-                <input type="submit" class="btn btn-lg btn-indigo" value="cadastrar">
-                </form>
+<div class="container my-5">
+    <h2 class="mb-4">Cadastro de Setor</h2>
+    
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert {{ message.tags }}">
+                {{ message }}
             </div>
+        {% endfor %}
+    {% endif %}
+    
+    <div class="row">
+        <div class="col-md-6">
+            <form action="{% url 'cadastrar_setor' %}" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                
+                <div class="form-group">
+                    <label for="empresa">Selecione a Empresa:</label>
+                    <select name="empresa" id="empresa" class="form-control">
+                        {% for empresa in empresas %}
+                            <option value="{{ empresa.id }}">{{ empresa.nome_empresa }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                
+                <div class="form-group">
+                    <label for="nome_setor">Nome do Setor:</label>
+                    <input type="text" name="nome_setor" id="nome_setor" placeholder="Digite o nome do setor" class="form-control" required>
+                </div>
+                
+                <button type="submit" class="btn btn-primary btn-lg">Cadastrar</button>
+            </form>
         </div>
     </div>
+</div>
 {% endblock 'body' %}
