--- a/empresa/templates/listar_setores.html
+++ b/empresa/templates/listar_setores.html
@@ -7,30 +7,40 @@
 {% block 'body' %}
 {% include "partials/barra_navegacao.html" %}
 
-<div class="container my-5 dark-color container_empresas">
+<div class="container my-5">
     <h2 class="mb-4">Lista de Setores</h2>
 
-    <table class="table table-striped">
-        <thead>
-            <tr class="cabecalho" style="background-color: transparent !important;">
-                <th scope="col">Id</th>
-                <th scope="col">Empresa</th>
-                <th scope="col">Setor</th>
-                <th scope="col">Ação</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for setor in setores %}
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert {{ message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+
+    <div class="table-responsive">
+        <table class="table table-striped table-hover">
+            <thead class="thead-light">
                 <tr>
-                    <td>{{ setor.id }}</td>
-                    <td>{{ setor.empresa }}</td>
-                    <td>{{ setor.nome_setor }}</td>
-                    <td>
-                        <button type="button" class="btn btn-warning">Editar</button>
-                    </td>
+                    <th scope="col">ID</th>
+                    <th scope="col">Empresa</th>
+                    <th scope="col">Setor</th>
+                    <th scope="col">Ação</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for setor in setores %}
+                    <tr>
+                        <td>{{ setor.id }}</td>
+                        <td>{{ setor.empresa }}</td>
+                        <td>{{ setor.nome_setor }}</td>
+                        <td>
+                            <a href="#" class="btn btn-warning btn-sm">Editar</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
 {% endblock 'body' %}
