--- a/parametros/templates/home.html
+++ b/parametros/templates/home.html
@@ -32,8 +32,8 @@
             <div class="col-md-6">
                 <div class="card mb-4">
                     <div class="card-body">
-                        <h5 class="card-title">Próximos Eventos</h5>
-                        <p class="card-text">Esta seção pode ser usada para listar eventos importantes ou prazos próximos.</p>
+                        <h5 class="card-title">Próximos Computadores para checagem:</h5>
+                        <p class="card-text">Seção destinada para fazer verificação de computadores.</p>
                     </div>
                 </div>
             </div>
