--- a/equipamentos/templates/listar_computadores.html
+++ b/equipamentos/templates/listar_computadores.html
@@ -43,7 +43,7 @@
                         <td>{{ computador.modelo }}</td>
                         <td>{{ computador.serial_number }}</td>                                                                                                
                         <td>
-                            <a href="{% url "detalhe_computador" computador.id %}" class="btn btn-warning btn-sm" role="button">
+                            <a href="{% url "detalhes_computador" computador.id %}" class="btn btn-warning btn-sm" role="button">
                                 Visualizar
                             </a>
                         </td>
