--- a/parametros/templates/home.html
+++ b/parametros/templates/home.html
@@ -17,6 +17,7 @@
                 <p class="card-text">
                     {{ current_time|date:"d/m/Y H:i:s" }}
                 </p>
+                <h6 class="card-title">Para melhor uso, utilize tudo em maiúsculo</h6>
             </div>
         </div>
 
