--- a/empresa/templates/listar_empresas.html
+++ b/empresa/templates/listar_empresas.html
@@ -7,7 +7,10 @@
 {% block 'body' %}
 {% include "partials/barra_navegacao.html" %}
 <div class="container my-5">
-    <h2 class="mb-4">Lista de Empresas</h2>
+    <div class="d-flex align-items-center">
+        <h2 class="mr-3">Empresas</h2>
+        <a href="{% url 'cadastrar_empresa' %}" class="btn btn-outline-success">Cadastrar</a>
+    </div>
     {% if messages %}
         {% for message in messages %}
             <div class="alert {{ message.tags }}">
