--- a/empresa/templates/listar_operadores.html
+++ b/empresa/templates/listar_operadores.html
@@ -8,8 +8,10 @@
 {% include "partials/barra_navegacao.html" %}
     
 <div class="container my-5">
-    <h2 class="mb-4">Listar Operadores</h2>
-
+    <div class="d-flex align-items-center">
+        <h2 class="mr-3">Operadores</h2>
+        <a href="{% url 'cadastrar_operador' %}" class="btn btn-outline-success">Cadastrar</a>
+    </div>
     <div class="table-responsive">
         <table class="table table-striped table-hover">
             <thead class="thead-light">
