--- a/empresa/templates/listar_setores.html
+++ b/empresa/templates/listar_setores.html
@@ -8,8 +8,10 @@
 {% include "partials/barra_navegacao.html" %}
 
 <div class="container my-5">
-    <h2 class="mb-4">Lista de Setores</h2>
-
+    <div class="d-flex align-items-center">
+        <h2 class="mr-3">Setores</h2>
+        <a href="{% url 'cadastrar_contato' %}" class="btn btn-outline-success">Cadastrar</a>
+    </div>
     {% if messages %}
         {% for message in messages %}
             <div class="alert {{ message.tags }}">
