--- a/equipamentos/templates/listar_sistemas_operacionais.html
+++ b/equipamentos/templates/listar_sistemas_operacionais.html
@@ -7,8 +7,10 @@
 {% block 'body' %}
 {% include "partials/barra_navegacao.html" %}
   <div class="container my-5">
-      <h2 class="mb-4">Lista de Sistemas Operacionais</h2>
-
+    <div class="d-flex align-items-center">
+        <h2 class="mr-3">Sistemas Operacionais</h2>
+        <a href="{% url 'cadastrar_sistema_operacional' %}" class="btn btn-outline-success">Cadastrar</a>
+    </div>
       {% if messages %}
           <div class="alert-container mb-4">
               {% for message in messages %}
