--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -28,33 +28,32 @@
           Empresa
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
-          <a class="dropdown-item" href="{% url 'cadastrar_empresa' %}">Cadastro de Empresa</a>
+          <a class="dropdown-item" href="{% url 'listar_empresas' %}">Empresa</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'cadastrar_setor' %}">Cadastro de Setor</a>
+          <a class="dropdown-item" href="{% url 'listar_setores' %}">Setor</a>
         </div>
       </li>
+      <!-- MENU CONTATOS -->
+      <li class="nav-item">
+        <a class="nav-link" href="{% url "listar_contatos" %}">Contatos Externos</a>
+      </li>      
       <!-- MENU OPERADORES -->
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Operador
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink3">
-          <a class="dropdown-item" href="{% url 'cadastrar_operador' %}">Cadastro de Operador</a>
-        </div>
-      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url "listar_operadores" %}">Operadores</a>
+      </li> 
       <!-- MENU EQUIPAMENTOS -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Equipamentos
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink4">
-          <a class="dropdown-item" href="{% url 'cadastrar_computador' %}">Computador</a>
+          <a class="dropdown-item" href="{% url 'listar_computadores' %}">Computador</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'cadastrar_marca' %}">Marca</a>
+          <a class="dropdown-item" href="{% url 'listar_marcas' %}">Marca</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'cadastrar_software' %}">Software</a>
+          <a class="dropdown-item" href="{% url 'listar_softwares' %}">Software</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'cadastrar_sistema_operacional' %}">Sistema Operacional</a>
+          <a class="dropdown-item" href="{% url 'listar_sistemas_operacionais' %}">Sistema Operacional</a>
         </div>
       </li>
       <!-- MENU OCORRÊNCIAS -->
@@ -72,23 +71,6 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Wiki</a>
       </li>         
-      <!-- MENU RELATÓRIOS -->
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink6" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Relatórios
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink6">
-          <a class="dropdown-item" href="{% url 'listar_empresas' %}">Listar Empresas</a>
-          <a class="dropdown-item" href="{% url 'listar_setores' %}">Listar Setores</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'listar_operadores' %}">Listar Operadores</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'listar_computadores' %}">Listar Computadores</a>
-          <a class="dropdown-item" href="{% url 'listar_marcas' %}">Listar Marcas</a>
-          <a class="dropdown-item" href="{% url 'listar_softwares' %}">Listar Softwares</a>
-          <a class="dropdown-item" href="{% url 'listar_sistemas_operacionais' %}">Listar Sistemas Operacionais</a>
-        </div>
-      </li>
     </ul>
     <!-- FORMULÁRIO DE LOGOUT -->
     <form class="form-inline ml-auto" action="{% url 'logout' %}" method="post">
