--- a/empresa/templates/listar_setores.html
+++ b/empresa/templates/listar_setores.html
@@ -10,7 +10,7 @@
 <div class="container my-5">
     <div class="d-flex align-items-center">
         <h2 class="mr-3">Setores</h2>
-        <a href="{% url 'cadastrar_contato' %}" class="btn btn-outline-success">Cadastrar</a>
+        <a href="{% url 'cadastrar_setor' %}" class="btn btn-outline-success">Cadastrar</a>
     </div>
     {% if messages %}
         {% for message in messages %}
