Adicionando empresa para o operador

--- a/empresa/templates/cadastrar_operador.html
+++ b/empresa/templates/cadastrar_operador.html
@@ -26,7 +26,24 @@
         <div class="col-md-8">
             <form action="{% url 'cadastrar_operador' %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
-                
+
+                <div class="form-group">
+                    <label for="empresa">Selecione a Empresa:</label>
+                    <select name="empresa" id="empresa" class="form-control" disabled>
+                        <option value="{{ empresa.id }}">{{ empresa }}</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="setor">Selecione o Setor:</label>
+                    <select id="setor" name="setor" class="form-control" required>
+                        {% for setor in setores %}
+                            <option value="{{ setor.id }}">{{ setor.nome_setor }}</option>
+                        {% endfor %}                        
+                    </select>
+                </div>
+
+
                 <div class="form-group">
                     <label for="nome_operador">Nome do Operador:</label>
                     <input type="text" id="nome_operador" name="nome_operador" class="form-control" placeholder="Digite o nome do colaborador..." required>
@@ -37,14 +54,7 @@
                     <input type="email" id="email" name="email" class="form-control" placeholder="Digite o email..." required>
                 </div>
 
-                <div class="form-group">
-                    <label for="setor">Selecione o Setor:</label>
-                    <select id="setor" name="setor" class="form-control" required>
-                        {% for setor in setores %}
-                            <option value="{{ setor.id }}">{{ setor.nome_setor }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
+
 
                 <div class="form-group">
                     <label for="status">Status:</label>
