--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -29,18 +29,15 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
           <a class="dropdown-item" href="{% url 'listar_empresas' %}">Empresa</a>
-          <div class="dropdown-divider"></div>
+        <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url 'listar_setores' %}">Setor</a>
-        </div>
+        <div class="dropdown-divider"></div>          
+          <a class="dropdown-item" href="{% url "listar_operadores" %}">Operadores</a>
       </li>
       <!-- MENU CONTATOS -->
       <li class="nav-item">
         <a class="nav-link" href="{% url "listar_contatos" %}">Contatos Externos</a>
       </li>      
-      <!-- MENU OPERADORES -->
-      <li class="nav-item">
-        <a class="nav-link" href="{% url "listar_operadores" %}">Operadores</a>
-      </li> 
       <!-- MENU EQUIPAMENTOS -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
