Ajuste no cadastro de operador

--- a/empresa/templates/cadastrar_operador.html
+++ b/empresa/templates/cadastrar_operador.html
@@ -29,7 +29,7 @@
 
                 <div class="form-group">
                     <label for="empresa">Selecione a Empresa:</label>
-                    <select name="empresa" id="empresa" class="form-control" disabled>
+                    <select name="empresa" id="empresa" class="form-control">
                         <option value="{{ empresa.id }}">{{ empresa }}</option>
                     </select>
                 </div>
