--- a/empresa/templates/cadastrar_empresa.html
+++ b/empresa/templates/cadastrar_empresa.html
@@ -82,6 +82,11 @@
                     <input type="text" id="uf" name="uf" placeholder="Digite o UF (2 caracteres)..." class="form-control">
                 </div>
 
+                <div class="col-12 mb-3">
+                    <label for="observacoes">Observações:</label>
+                    <textarea id="observacoes" class="form-control" name="observacoes" rows="3"></textarea>
+                </div>
+                
                 <div class="col-12">
                     <input type="submit" class="btn btn-lg btn-indigo" value="Cadastrar">
                 </div>
